--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,11 +3,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.1.4.1</Version>
+    <Version>24.1.11.2</Version>
+    <Description>Working with csprojs at one package</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="17.8.3" />
-    <PackageReference Include="SunamoXml" Version="24.1.4.1" />
+    <PackageReference Include="SunamoXml" Version="24.1.10.1" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
