--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,12 +3,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.1.11.2</Version>
+    <Version>24.1.24.1</Version>
     <Description>Working with csprojs at one package</Description>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Build" Version="17.8.3" />
-    <PackageReference Include="SunamoXml" Version="24.1.10.1" />
+    <PackageReference Include="SunamoCollectionsGenericShared" Version="24.1.23.1" />
+    <PackageReference Include="SunamoFileSystem" Version="24.1.24.1" />
+    <PackageReference Include="SunamoReflection" Version="24.1.23.2" />
+    <PackageReference Include="SunamoXml" Version="24.1.14.1" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC</DefineConstants>
