--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,8 +3,11 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.3.13.3</Version>
+    <Version>24.7.3.1</Version>
     <Description>Working with csprojs at one package</Description>
+    <PackageReleaseNotes>Return inner text of xml node in csproj</PackageReleaseNotes>
+    <Authors>www.sunamo.cz</Authors>
+    <Copyright>www.sunamo.cz</Copyright>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj</DefineConstants>
@@ -12,25 +15,4 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj</DefineConstants>
   </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="SunamoExceptions" Version="24.5.18.1" />
-    <PackageReference Include="SunamoExtensions" Version="24.5.6.1" />
-    <PackageReference Include="SunamoXml" Version="24.2.6.2" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <PackageReference Include="xunit" Version="2.8.0" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.8.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.2">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Enums\" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\ToNugets.Cmd\SunamoFileIO\SunamoFileIO.csproj" />
-  </ItemGroup>
 </Project>
