--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.7.5.1</Version>
+    <Version>24.7.5.2</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>internal to public in _sunamo</PackageReleaseNotes>
+    <PackageReleaseNotes>.</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
   </PropertyGroup>
