--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -12,11 +12,15 @@
     <RepositoryUrl>https://github.com/sunamo/SunamoCsproj.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj;SunamoCsproj.csproj</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj</DefineConstants>
+    <DefineConstants>$(DefineConstants);ASYNC;SunamoCsproj;SunamoCsproj.csproj</DefineConstants>
   </PropertyGroup>
+  <ItemGroup>
+    <None Include="readme.md" Pack="True" PackagePath="." />
+  </ItemGroup>
 </Project>
