--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.10.2.1</Version>
+    <Version>24.10.30.1</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Return string instead of List&lt;string&gt;</PackageReleaseNotes>
+    <PackageReleaseNotes>Removed files </PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
@@ -23,5 +23,8 @@
   </PropertyGroup>
   <ItemGroup>
     <None Include="readme.md" Pack="True" PackagePath="." />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="_sunamo\SunamoCollections\" />
   </ItemGroup>
 </Project>
