--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.12.24.1</Version>
+    <Version>24.12.24.2</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Added method for NoWarn</PackageReleaseNotes>
+    <PackageReleaseNotes>Added support for add/remove NoWarn in csproj </PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
