--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.12.24.3</Version>
+    <Version>24.12.24.4</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Adopt to NoWarn</PackageReleaseNotes>
+    <PackageReleaseNotes>Join elements from Debug/Release PropertyGroup to one</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
