--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <Version>24.12.24.4</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Join elements from Debug/Release PropertyGroup to one</PackageReleaseNotes>
+    <PackageReleaseNotes>Fix creating </PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
