--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.12.24.7</Version>
+    <Version>24.12.24.8</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Removed spaces</PackageReleaseNotes>
+    <PackageReleaseNotes>Renamed tag</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
@@ -24,9 +24,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);CA1822</DefineConstants>
     <NoWarn>CA1822</NoWarn>
+    <DefineConstant />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);CA1822</DefineConstants>
     <NoWarn>CA1822</NoWarn>
+    <DefineConstant />
   </PropertyGroup>
 </Project>
