--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.12.24.9</Version>
+    <Version>24.12.25.1</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Added #pragma</PackageReleaseNotes>
+    <PackageReleaseNotes>Updated csproj</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
@@ -23,10 +23,10 @@
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);CA1822;ASYNC</DefineConstants>
-    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA2249</NoWarn>
+    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA2249;CS1998</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>$(DefineConstants);CA1822;ASYNC</DefineConstants>
-    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA2249</NoWarn>
+    <NoWarn>CA1822;CS1573;CS1572;CS1570;CA1866;CA2249;CS1998</NoWarn>
   </PropertyGroup>
 </Project>
