--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>24.12.25.1</Version>
+    <Version>24.12.25.2</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Updated csproj</PackageReleaseNotes>
+    <PackageReleaseNotes>Added nullable marks</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
