--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>25.1.25.1</Version>
+    <Version>25.1.29.1</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Removed absolute paths exists in my PC filesystem</PackageReleaseNotes>
+    <PackageReleaseNotes>Deleted private, protected, internal unused methods</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
