--- a/SunamoCsproj.csproj
+++ b/SunamoCsproj.csproj
@@ -3,9 +3,9 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Version>25.1.29.1</Version>
+    <Version>25.3.4.1</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>Deleted private, protected, internal unused methods</PackageReleaseNotes>
+    <PackageReleaseNotes>Add or replace PackageReference</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
@@ -20,6 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="_sunamo\SunamoCollections\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.2" />
   </ItemGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>$(DefineConstants);CA1822;ASYNC</DefineConstants>
