--- a/SunamoCsproj.Tests/SunamoCsproj.Tests.csproj
+++ b/SunamoCsproj.Tests/SunamoCsproj.Tests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>true</IsPackable>
     <IsTestProject>true</IsTestProject>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);CS1591;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8619;CS8625;CS0618;xUnit1013</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
