--- a/SunamoCsproj/SunamoCsproj.csproj
+++ b/SunamoCsproj/SunamoCsproj.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <Version>26.1.3.1</Version>
     <Description>Working with csprojs at one package</Description>
-    <PackageReleaseNotes>feat: Improved code quality</PackageReleaseNotes>
+    <PackageReleaseNotes>feat: Improving code quality</PackageReleaseNotes>
     <Authors>www.sunamo.cz</Authors>
     <Copyright>www.sunamo.cz</Copyright>
     <PackageProjectUrl>https://sunamo.cz/</PackageProjectUrl>
@@ -15,6 +15,7 @@
     <PackageReadmeFile>readme.md</PackageReadmeFile>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <IsPackable>true</IsPackable>
+    <NoWarn>$(NoWarn);CS1591;CS8600;CS8601;CS8602;CS8603;CS8604;CS8618;CS8619;CS8625</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <None Include="readme.md" Pack="True" PackagePath="." />
